test/types/atomic/vass/assign-atomics-1.good
assign-atomics-1.chpl:3: error: Cannot directly assign atomic variables
