test/types/atomic/vass/assign-atomics-1.chpl

var a, b: atomic int;
a = b;
